--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "canvas-confetti": "^1.9.2",
     "gray-matter": "^4.0.3",
+    "js-calendar-converter": "^0.0.6",
     "next": "14.1.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
