--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-calendar-converter": "^0.0.6",
     "next": "14.1.3",
     "next-mdx-remote": "^4.4.1",
+    "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18"
