--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.35",
     "@types/canvas-confetti": "^1.6.4",
     "canvas-confetti": "^1.9.2",
     "gray-matter": "^4.0.3",
     "js-calendar-converter": "^0.0.6",
-    "next": "14.1.3",
+    "next": "14.1.4",
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-cookie": "^7.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype": "^13.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
