--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "rehype": "^13.0.1",
     "rehype-katex": "^7.0.0",
+    "rehype-prism-plus": "^2.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "3.0.1",
     "remark-math": "^6.0.0"
