--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "rehype": "^13.0.1",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-prism-plus": "^2.0.0",
     "remark": "^15.0.1",
