--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/canvas-confetti": "^1.6.4",
     "canvas-confetti": "^1.9.2",
     "gray-matter": "^4.0.3",
+    "isomorphic-git": "^1.25.6",
     "js-calendar-converter": "^0.0.6",
     "next": "14.1.4",
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.6.11",
+    "node-git": "^0.0.0",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
