--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.35",
     "@types/canvas-confetti": "^1.6.4",
+    "bright": "^0.8.5",
     "canvas-confetti": "^1.9.2",
+    "esbuild": "^0.20.2",
     "gray-matter": "^4.0.3",
     "isomorphic-git": "^1.25.6",
     "js-calendar-converter": "^0.0.6",
+    "mdx-bundler": "^10.0.2",
     "next": "14.1.4",
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.6.11",
