--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.35",
+    "@octokit/rest": "^20.1.0",
     "@types/canvas-confetti": "^1.6.4",
     "bright": "^0.8.5",
     "canvas-confetti": "^1.9.2",
